fix(Variables): rename 'grey' colors to 'gray' to align with US English terminology

--- a/app/assets/styles/variables.sass
+++ b/app/assets/styles/variables.sass
@@ -1,7 +1,7 @@
 @use "sass:math"
 
 // Colors
-$external-color: grey
+$external-color: gray
 $background-color: #EAE2D3
 $element-background-color: #FEF5E5
 $second-background-color: #FAEBD7
